[gd_scene load_steps=14 format=3 uid="uid://b0ieuc3rlnfad"]

[ext_resource type="TileSet" uid="uid://bts106mttgyup" path="res://Assets/mainSets.tres" id="1_2ei06"]
[ext_resource type="Texture2D" uid="uid://cb5ldvtoqtfuw" path="res://img/vx_chara03_c.png" id="2_wkhse"]
[ext_resource type="Script" path="res://scenes/level1/CharacterBody2D.gd" id="4_7tasp"]
[ext_resource type="PackedScene" uid="uid://085xg8eitu0h" path="res://mainCharacter/main_character.tscn" id="4_gcj3s"]
[ext_resource type="Texture2D" uid="uid://c6lufwwr73sg3" path="res://img/buttons/photo_2024-04-13_23-15-14 (4).jpg" id="5_20eek"]
[ext_resource type="Texture2D" uid="uid://cofy81fqu7my7" path="res://img/buttons/photo_2024-04-13_23-15-14 (5).jpg" id="6_5ghnm"]
[ext_resource type="Texture2D" uid="uid://dbwqeefni8edn" path="res://img/buttons/photo_2024-04-13_23-15-14.jpg" id="7_3oaod"]
[ext_resource type="Texture2D" uid="uid://dvlmy50o8hfio" path="res://img/buttons/photo_2024-04-13_23-15-14 (3).jpg" id="8_62bbt"]
[ext_resource type="Texture2D" uid="uid://tbupw3vg40dv" path="res://img/buttons/photo_2024-04-13_23-15-14 (2).jpg" id="9_q4vxl"]
[ext_resource type="LabelSettings" uid="uid://s2pb4p1i1awi" path="res://Assets/fonts/new_label_settings.tres" id="10_igd56"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ynv1n"]
atlas = ExtResource("2_wkhse")
region = Rect2(32, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1txn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynv1n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3ttg"]
size = Vector2(121.6, 102.4)

[node name="Level" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_2ei06")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 131072, 0, 2, 131072, 0, 3, 131072, 0, 4, 131072, 0, 5, 131072, 0, 6, 131072, 0, 7, 131072, 0, 8, 131072, 0, 9, 131072, 0, 10, 131072, 0, 11, 196608, 0, 65547, 131072, 1, 65548, 131072, 3, 65549, 131072, 3, 65551, 131072, 3, 65552, 131072, 3, 65553, 131072, 3, 17, 4, 0, 16, 4, 0, 15, 4, 0, 14, 4, 0, 13, 4, 0, 12, 4, 0, 65537, 131072, 2, 65536, 65536, 2, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 65540, 131072, 2, 65541, 131072, 2, 65542, 131072, 2, 65543, 131072, 2, 65544, 327680, 0, 65545, 131072, 1, 65546, 131072, 1, 131073, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 65536, 2, 131081, 131072, 2, 131082, 131072, 2, 131083, 196608, 2, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 262162, 4, 0, 262161, 4, 0, 262160, 4, 0, 262159, 4, 0, 262158, 4, 0, 262157, 4, 0, 262156, 4, 0, 262155, 4, 0, 262154, 4, 0, 262153, 4, 0, 262152, 4, 0, 262151, 4, 0, 262150, 4, 0, 262146, 4, 0, 262145, 4, 0, 196609, 4, 0, 196610, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 327698, 4, 0, 327697, 4, 0, 327696, 4, 0, 327695, 4, 0, 327694, 4, 0, 327693, 4, 0, 327692, 4, 0, 327691, 4, 0, 327690, 4, 0, 327689, 4, 0, 327688, 4, 0, 327687, 4, 0, 327686, 4, 0, 327682, 4, 0, 327681, 4, 0, 327680, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 458770, 4, 0, 458769, 4, 0, 458768, 4, 0, 458767, 4, 0, 458766, 4, 0, 458765, 4, 0, 458764, 4, 0, 458763, 4, 0, 458762, 4, 0, 458761, 4, 0, 458760, 4, 0, 458759, 4, 0, 458758, 4, 0, 458757, 4, 0, 458756, 4, 0, 458755, 4, 0, 458754, 4, 0, 458752, 4, 0, 458753, 4, 0, 131072, 4, 0, 196608, 4, 0, 262144, 4, 0, 18, 4, 0, 65554, 131072, 3, 131090, 4, 0, 196626, 4, 0, 65550, 131072, 3, 65539, 131072, 2, 65538, 131072, 2, 131074, 4, 0, 393219, 4, 0, 327683, 4, 0, 262147, 4, 0, 196611, 4, 0, 196612, 4, 0, 262148, 4, 0, 327684, 4, 0, 393220, 4, 0, 393221, 4, 0, 327685, 4, 0, 262149, 4, 0, 196613, 4, 0)

[node name="MainCharacter" parent="." instance=ExtResource("4_gcj3s")]
position = Vector2(22, 30)
right_limit = 500
bottom_limit = 500

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("4_7tasp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(164, 31)
scale = Vector2(0.3125, 0.3125)
sprite_frames = SubResource("SpriteFrames_f1txn")

[node name="Area2D" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]
position = Vector2(3.19983, -3.19999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/Area2D"]
position = Vector2(6.10352e-05, 9.59999)
shape = SubResource("RectangleShape2D_g3ttg")

[node name="Control" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 41.0
offset_bottom = 40.0

[node name="help" type="TouchScreenButton" parent="CharacterBody2D/Control"]
position = Vector2(142, 52)
scale = Vector2(0.0471204, 0.0564516)
texture_normal = ExtResource("5_20eek")

[node name="nothelp" type="TouchScreenButton" parent="CharacterBody2D/Control"]
position = Vector2(161, 52)
scale = Vector2(0.047619, 0.0564516)
texture_normal = ExtResource("6_5ghnm")

[node name="answer" type="TouchScreenButton" parent="CharacterBody2D/Control"]
position = Vector2(143, 52)
scale = Vector2(0.0449735, 0.0564516)
texture_normal = ExtResource("7_3oaod")

[node name="notanswer" type="TouchScreenButton" parent="CharacterBody2D/Control"]
position = Vector2(161, 52)
scale = Vector2(0.047619, 0.0483871)
texture_normal = ExtResource("8_62bbt")

[node name="notanswer2" type="TouchScreenButton" parent="CharacterBody2D/Control"]
position = Vector2(180, 52)
scale = Vector2(0.0449735, 0.0564515)
texture_normal = ExtResource("9_q4vxl")

[node name="Label" type="Label" parent="CharacterBody2D"]
offset_left = 70.0
offset_top = 2.0
offset_right = 110.0
offset_bottom = 55.0
label_settings = ExtResource("10_igd56")

[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="pressed" from="CharacterBody2D/Control/help" to="CharacterBody2D" method="_on_help_pressed"]
[connection signal="pressed" from="CharacterBody2D/Control/nothelp" to="CharacterBody2D" method="_on_nothelp_pressed"]
[connection signal="pressed" from="CharacterBody2D/Control/answer" to="CharacterBody2D" method="_on_answer_pressed"]
[connection signal="pressed" from="CharacterBody2D/Control/notanswer" to="CharacterBody2D" method="_on_notanswer_pressed"]
[connection signal="pressed" from="CharacterBody2D/Control/notanswer2" to="CharacterBody2D" method="_on_notanswer_2_pressed"]
